intel/bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/log.txt
bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:92:11: error: expected expression
  float (*)[4] ao;
          ^
bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:93:11: error: expected expression
  float (*)[4] light;
          ^
bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:110:25: error: use of undeclared identifier 'ao'
  make_cube_faces(data, ao, light, left, right, top, bottom, front, back, wleft, wright, wtop, wbottom, wfront, wback, x, y, z, n);
                        ^
bench_214_new/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:110:29: error: use of undeclared identifier 'light'
  make_cube_faces(data, ao, light, left, right, top, bottom, front, back, wleft, wright, wtop, wbottom, wfront, wback, x, y, z, n);
                            ^
4 errors generated.
HLS FPGA Parse FAILED.
